<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent" android:layout_height="match_parent">

    <!-- http://www.mindgrub.com/blog/matt-stanford/implementing-collapsing-toolbar-android-material-design -->

    <android.support.design.widget.AppBarLayout
        android:id="@+id/homeappbar"
        android:layout_width="match_parent" android:layout_height="wrap_content">
        <android.support.design.widget.CollapsingToolbarLayout
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@style/ExpandedTextAppearance"
            app:collapsedTitleTextAppearance="@style/CollapsedTextAppearance"
            android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout
                android:background="#EEEEEE"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                android:layout_marginTop="?attr/actionBarSize"
                android:orientation="vertical" android:gravity="center"
                android:layout_width="match_parent" android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginTop="5dp" android:layout_marginBottom="10dp"
                    android:src="@drawable/banner" android:scaleType="centerInside"
                    android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="0dp">
                </ImageView>
                <View android:layout_marginTop="3dp" android:background="@color/colorGray" android:layout_width="match_parent" android:layout_height="2dp"></View>
            </LinearLayout>
            <android.support.v7.widget.Toolbar
                android:id="@+id/hometoolbar"
                app:layout_collapseMode="pin"
                android:background="#EEEEEE"
                android:layout_width="match_parent" android:layout_height="?attr/actionBarSize">
                <ImageView
                    android:id="@+id/homecontentgpsimageview"
                    android:src="@drawable/ic_gps"
                    android:alpha="0"
                    android:layout_width="16dp" android:layout_height="16dp">
                </ImageView>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/homeviewpager"
        android:layout_marginBottom="38dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent" android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="bottom" android:background="#FFFFFF"
        android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView
            android:id="@+id/homecontentdebugtextview"
            android:text="debug"
            android:visibility="gone"
            android:textColor="#FFFFFF" android:textStyle="bold"
            android:background="#8822DD" android:gravity="center" android:ellipsize="end"
            android:layout_width="match_parent" android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/homecontentnetworkerrortextview"
            android:text="@string/networkerror"
            android:visibility="gone"
            android:textColor="#FFFFFF" android:textStyle="bold"
            android:background="#DD8822" android:gravity="center" android:ellipsize="end"
            android:layout_width="match_parent" android:layout_height="wrap_content">
        </TextView>
        <View android:background="@color/colorLiteGray" android:layout_width="match_parent" android:layout_height="2dp"></View>
        <LinearLayout
            android:orientation="horizontal" android:background="#FFFFFF"
            android:layout_width="match_parent" android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/homeridesbutton"
                android:text="@string/rides"
                android:ellipsize="end"
                android:drawableTop="@drawable/ic_rides"
                android:stateListAnimator="@null"
                app:backgroundTint="@color/footer_button_tint"
                android:textColor="@color/footer_button_text_color"
                android:layout_weight=".25" android:layout_width="0dp" android:layout_height="match_parent">
            </android.support.v7.widget.AppCompatButton>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/homeroutesbutton"
                android:text="@string/routes"
                android:ellipsize="end"
                android:drawableTop="@drawable/ic_routes"
                android:stateListAnimator="@null"
                android:textColor="@color/footer_button_text_color"
                app:backgroundTint="@color/footer_button_tint"
                android:layout_weight=".25" android:layout_width="0dp" android:layout_height="match_parent">
            </android.support.v7.widget.AppCompatButton>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/homefollowersbutton"
                android:text="@string/followers"
                android:ellipsize="end"
                android:drawableTop="@drawable/ic_share"
                android:stateListAnimator="@null"
                app:backgroundTint="@color/footer_button_tint"
                android:textColor="@color/footer_button_text_color"
                android:layout_weight=".25" android:layout_width="0dp" android:layout_height="wrap_content">
            </android.support.v7.widget.AppCompatButton>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:visibility="invisible"
        android:id="@+id/homefab"
        app:fabSize="mini"
        android:src="@drawable/ic_message"
        app:backgroundTint="@color/colorPlum"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="bottom|end" android:layout_marginRight="@dimen/fab_margin" android:layout_marginBottom="72dp">
    </android.support.design.widget.FloatingActionButton>

</android.support.design.widget.CoordinatorLayout>
